--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   color: white;
   border-radius: 0.5rem;
   margin-top: 1rem;
+  margin-bottom: 1rem;
   padding: 5rem;
   border: 4px solid #aaaaaa;
 }
@@ -124,6 +125,8 @@ button {
 }
 
 .setters {
+  display: flex;
+
   width: 58%;
   margin: 5rem auto;
   background-color: #0b5402;
